force-app/main/default/objects/CCX_Payments__c/CCX_Payments__c.object-meta.xml
<CustomObject>
    <label>CCX_Payments</label>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>BillNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCX_Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>