force-app/main/default/objects/CCX_Payments__c/fields/CCX_Order__c.field-meta.xml
<CustomField>
    <fullName>CCX_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCX_Order</label>
    <referenceTo>CCX_Order__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>