force-app/main/default/objects/CCX_Payments__c/recordTypes/Customer_Payment.recordType-meta.xml
<RecordType>
    <fullName>Customer_Payment</fullName>
    <active>true</active>
    <label>Customer Payment</label>
</RecordType>