force-app/main/default/objects/CCX_Payments__c/recordTypes/Supplier_Payment.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Payment</fullName>
    <active>true</active>
    <label>Supplier Payment</label>
</RecordType>